# fastapi-tutor

./: .gitignore  README.md  closure1.py  deco1.py  main.py  pyproject.toml  ruff.toml
src/: deco1.py
src/fastapi_tutor/: __init__.py  algo1.py  api_public.py  async_1.py  class_person.py  deco2.py  depend1.py  depend_inject.py  dynamic_array.py  fib1.py  fib3.py  gene1.py  gene2.py  linked_list1.py  main.py  query.py  scope_demo.py  shebang.py  walrus.py
tests/: __init__.py  test_main.py
