[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-tutor"
version = "0.1.0"
description = "FastAPI 学习教程项目"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.120.0",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.urls]
repository = "https://github.com/hordu-ma/fastapi-tutor"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[tool.uv]

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_tutor"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
